Bug fix: layout problem in navbar button group

--- a/codeplay.css
+++ b/codeplay.css
@@ -42,6 +42,10 @@
 	margin-left: -1px;
 }
 
+.navbar .btn-group .btn {
+	margin-left: -1px; /* Fix group layout in navbar */
+}
+
 /* ----- Tabs ----- */
 
 .nav-tabs {
